Service/src/main/java/org/example/error/SongValidationException.java
package org.example.error;

public class SongValidationException extends Exception {
    public SongValidationException(String message) {
        super(message);
    }
}
